[gd_scene load_steps=4 format=3 uid="uid://dtjf71ka68anv"]

[ext_resource type="Texture2D" uid="uid://bdr5qrqlnxt3x" path="res://root/scenes/main_menu_scene/image/thumbnail/introduce_godot.png" id="1_c1ipj"]
[ext_resource type="Script" uid="uid://c8rq40l4y7gs6" path="res://root/scenes/main_menu_scene/game_card.gd" id="1_w4vuy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1ipj"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.101960786, 0.39607844, 0.8901961, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="GameCard" type="Control"]
layout_mode = 3
anchor_right = 0.19500001
anchor_bottom = 0.55600005
offset_right = 0.3999939
offset_bottom = -0.32003784
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4vuy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.6627451, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(1, 0.4509804, 0.26666668, 1)

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -11.5
offset_right = 43.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "ゲームタイトル"
vertical_alignment = 1

[node name="ThumbnailTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_c1ipj")
expand_mode = 1

[node name="GenreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_c1ipj")
text = "ジャンル"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "説明"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"
